// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`doesn't request bars when cache not invalidated 1`] = `Array []`;

exports[`doesn't request bars when fetch in progress 1`] = `Array []`;

exports[`errors when HTTP request fails 1`] = `
Array [
  Object {
    "type": "REQUEST_BARS",
  },
  Object {
    "error": "Service unavailable!",
    "type": "ERROR_BARS",
  },
]
`;

exports[`invalidates content 1`] = `
Object {
  "didInvalidate": true,
  "isFetching": false,
  "items": Array [],
  "selectedBarId": null,
}
`;

exports[`invalidates over one hour old cache 1`] = `
Array [
  Object {
    "type": "REQUEST_BARS",
  },
  Object {
    "bars": Array [],
    "receivedAt": 1482363367071,
    "type": "RECEIVE_BARS",
  },
]
`;

exports[`is possible to deselect a bar when no one is selected 1`] = `
Object {
  "didInvalidate": true,
  "isFetching": false,
  "items": Array [],
  "selectedBarId": null,
}
`;

exports[`receives new bars 1`] = `
Object {
  "didInvalidate": false,
  "isFetching": false,
  "items": Array [
    Object {
      "default_category": "Beer under 30",
      "post_address": "Norrtullsgatan 11",
      "post_author": 1,
      "post_category": "Beer under 30",
      "post_city": "Stockholm",
      "post_content": "Serves chilled Norrlands Guld on tap for only 29:-.One of the most best places in town for cheap beer lovers.",
      "post_country": "Sweden",
      "post_id": 38,
      "post_latitude": 59.3419634,
      "post_longitude": 18.051719899999966,
      "post_region": "Stockholm County",
      "post_status": "publish",
      "post_title": "MacLarens",
      "post_type": "gd_place",
      "post_zip": "113 29",
    },
    Object {
      "default_category": "Beer under 30",
      "post_address": "Sveavägen 39 Stockholm",
      "post_author": 1,
      "post_category": "Beer under 50",
      "post_city": "Stockholm",
      "post_content": "The famous Lion Bar chain is a perfect find for bargain brew lovers! 7 Places all around Stockholm serve chilled Spendrups (40cl, tapped) for 23:- until 20h. After this the prices will increase in two steps: until midnight the price will be 36:-, thereafter 40:-. Go and get there early to get yourself a crispy brew for under 30:- !",
      "post_country": "Sweden",
      "post_id": 39,
      "post_latitude": 59.3404626,
      "post_longitude": 18.05888660000005,
      "post_region": "Stockholm County",
      "post_status": "publish",
      "post_title": "Lion Bar Sveavägen 39",
      "post_type": "gd_place",
    },
  ],
  "lastUpdated": 1482363367071,
  "selectedBarId": null,
}
`;

exports[`requests and receives new bars 1`] = `
Array [
  Object {
    "type": "REQUEST_BARS",
  },
  Object {
    "bars": Array [
      Object {
        "default_category": "Beer under 30",
        "post_address": "Norrtullsgatan 11",
        "post_author": 1,
        "post_category": "Beer under 30",
        "post_city": "Stockholm",
        "post_content": "Serves chilled Norrlands Guld on tap for only 29:-.One of the most best places in town for cheap beer lovers.",
        "post_country": "Sweden",
        "post_id": 38,
        "post_latitude": 59.3419634,
        "post_longitude": 18.051719899999966,
        "post_region": "Stockholm County",
        "post_status": "publish",
        "post_title": "MacLarens",
        "post_type": "gd_place",
        "post_zip": "113 29",
      },
      Object {
        "default_category": "Beer under 30",
        "post_address": "Sveavägen 39 Stockholm",
        "post_author": 1,
        "post_category": "Beer under 50",
        "post_city": "Stockholm",
        "post_content": "The famous Lion Bar chain is a perfect find for bargain brew lovers! 7 Places all around Stockholm serve chilled Spendrups (40cl, tapped) for 23:- until 20h. After this the prices will increase in two steps: until midnight the price will be 36:-, thereafter 40:-. Go and get there early to get yourself a crispy brew for under 30:- !",
        "post_country": "Sweden",
        "post_id": 39,
        "post_latitude": 59.3404626,
        "post_longitude": 18.05888660000005,
        "post_region": "Stockholm County",
        "post_status": "publish",
        "post_title": "Lion Bar Sveavägen 39",
        "post_type": "gd_place",
      },
    ],
    "receivedAt": 1482363367071,
    "type": "RECEIVE_BARS",
  },
]
`;

exports[`requests new bars 1`] = `
Object {
  "didInvalidate": true,
  "isFetching": true,
  "items": Array [],
  "selectedBarId": null,
}
`;

exports[`selects a bar and deselects it 1`] = `
Object {
  "didInvalidate": true,
  "isFetching": false,
  "items": Array [],
  "selectedBarId": "DUMMY_ID",
}
`;

exports[`selects a bar and deselects it 2`] = `
Object {
  "didInvalidate": true,
  "isFetching": false,
  "items": Array [],
  "selectedBarId": null,
}
`;
